--- a/views/public/html/candidate-login.html
+++ b/views/public/html/candidate-login.html
@@ -138,31 +138,10 @@
               </div>
               <!-- /Logo -->
               <!-- <h4 class="mb-2">Adventure starts here 🚀</h4> -->
-              <p class="mb-4">Sign in to continue</p>
+              <p class="mb-4">Candidate Login - Nsnemo</p>
 
               <form id="candidate_login" class="mb-3">
-                <div class="mb-3">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">INDOS number</label>
-                        <input
-                          type="text"
-                          class="form-control"
-                          id="indos_number"
-                          name="indos_number"
-                          placeholder="Enter your INDOS number"
-                          autofocus
-                        />
-                      </div>
-                  <!-- <label for="indos_number" class="form-label">Username</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="username"
-                    name="username"
-                    placeholder="Enter your username"
-                    autofocus
-                  /> -->
-                </div>
+                
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
                   <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email" />
