--- a/views/public/html/crew-planner.html
+++ b/views/public/html/crew-planner.html
@@ -387,9 +387,7 @@
               </ul>
             </li>
 
-
-
-             <li class="menu-header small text-uppercase">
+            <!-- <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Vendor Management</span>
             </li>
             <li class="menu-item">
@@ -410,9 +408,7 @@
                 </li>
                 
               </ul>
-            </li>
-
-
+            </li> -->
             <li class="menu-header small text-uppercase">
               <span class="menu-header-text">Candidate Management</span>
             </li>
@@ -774,6 +770,10 @@
                             <option value="closed_by_ns">Closed by NS</option>
                             <option value="closed_by_client">Closed by Client</option>
                         </select>
+                    </div>
+                    
+                    <div>
+                      <input id="created_by" type="hidden">
                     </div>
                     
                     <div class="card-footer text-end pt-0 pe-0 pb-1">
