--- a/views/public/html/edit-c-contract.html
+++ b/views/public/html/edit-c-contract.html
@@ -835,13 +835,13 @@
                               <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
-                                          <input name="doc" type="file" id="editcontract_document" class="form-control"/>
+                                          <input name="doc" type="text" id="editcontract_document" class="form-control"/>
                                           <label for="editcontract_document">Document</label>
                                       </div>
                                   </div>
                                   <div class="col-md-6">
                                       <div class="form-floating">
-                                          <input name="aoa" type="file" id="editcontract_aoa" class="form-control"/>
+                                          <input name="aoa" type="text" id="editcontract_aoa" class="form-control"/>
                                           <label for="editcontract_aoa">AOA</label>
                                       </div>
                                   </div>
@@ -860,6 +860,12 @@
                                           <label for="editcontract_emigrate">Emigrate Number</label>
                                       </div>
                                   </div>
+                                  <div class="col-md-6 mb-0 pb-0">
+                                    <div class="form-floating">
+                                        <input name="created_by" type="hidden" id="created_by" class="form-control"/>
+                                        <label for="created_by">Created By</label>
+                                    </div>
+                                </div>
                               </div>
           
                               <div class="card-footer text-end mt-0 pt-0 mb-0 pb-0   pe-0">
