--- a/views/public/html/edit-c-medicals.html
+++ b/views/public/html/edit-c-medicals.html
@@ -736,10 +736,15 @@
                                 <input name="amt" type="text" id="hospital_amount" class="form-control">
                             </div>
                             <div class="col">
-                                <label for="hospital_upload" class="form-label">Upload</label>
-                                <input name="upload" type="file" id="hospital_upload" class="form-control">
-                            </div>
+                              <label for="hospital_upload" class="form-label">Upload</label>
+                              <input name="upload" type="file" id="hospital_upload" class="form-control">
+                          </div>
+                          
                         </div>
+                        <div class="col">
+                          <label for="created_by" class="form-label">Created By</label>
+                          <input name="created_by" type="hidden" id="created_by" class="form-control">
+                      </div>
                         <div class="card-footer text-end pt-0 pe-0 pb-1">
                           <button type="submit" class="btn btn-primary">Edit Medical</button>
                         </div>
