--- a/views/public/html/edit-c-travel.html
+++ b/views/public/html/edit-c-travel.html
@@ -746,9 +746,17 @@
                               </div>
           
                               <div class="mb-3">
-                                  <label for="travel_amount" class="form-label">Amount</label>
-                                  <input name="amount" type="text" id="travel_amount" class="form-control">
-                              </div>
+                                <label for="travel_amount" class="form-label">Amount</label>
+                                <input name="amount" type="text" id="travel_amount" class="form-control">
+                            </div>
+                            <div class="mb-3">
+                              <label for="reason" class="form-label">Reason</label>
+                              <input name="reason" type="text" id="reason" class="form-control">
+                          </div>
+                          <div class="mb-3">
+                            <label for="created_by" class="form-label">Created By</label>
+                            <input name="created_by" type="hidden" id="created_by" class="form-control">
+                        </div>
                               <div class="card-footer text-end pt-0 pe-0 pb-1">
                                 <button type="submit" class="btn btn-primary">EDIT TRAVEL</button>
                               </div>
