--- a/views/public/html/edit-cd.html
+++ b/views/public/html/edit-cd.html
@@ -151,28 +151,7 @@
 
 
 
-             <li class="menu-header small text-uppercase">
-              <span class="menu-header-text">Vendor Management</span>
-            </li>
-            <li class="menu-item">
-              <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Account Settings">Vendor</div>
-              </a>
-              <ul class="menu-sub">
-                <li class="menu-item">
-                  <a href="add-vendor.html" class="menu-link">
-                    <div data-i18n="Account">Add</div>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="add-user.html" class="menu-link">
-                    <div data-i18n="Account">List</div>
-                  </a>
-                </li>
-                
-              </ul>
-            </li>
+          
 
 
             <li class="menu-header small text-uppercase">
@@ -196,7 +175,11 @@
                     <div data-i18n="Account">Edit Profile</div>
                   </a>
                 </li>
-                
+                <li class="menu-item">
+                  <a href="edit-cDocuments.html" class="menu-link">
+                    <div data-i18n="Account">Manage Documents</div>
+                  </a>
+                </li>
               </ul>
             </li>
 
@@ -562,7 +545,7 @@
                         </div>
                         
                         <div class="row">
-                          <div class="col-md-6 mb-2">
+                          <div class="col-md-12 mb-2">
                               <div class="form-floating">
                                   <input
                                       type="text"
@@ -694,7 +677,7 @@
                             </div>
                     
                             <!-- Landline 1 -->
-                            <div class="col-md-6 mb-2">
+                            <!-- <div class="col-md-6 mb-2">
                                 <div class="form-floating">
                                     <input
                                         type="text"
@@ -706,10 +689,10 @@
                                     />
                                     <label for="candidate_c_tel1">Landline 1</label>
                                 </div>
-                            </div>
+                            </div> -->
                     
                             <!-- Email 1 -->
-                            <div class="col-md-6 mb-2">
+                            <div class="col-md-12 mb-2">
                                 <div class="form-floating">
                                     <input
                                         type="text"
@@ -806,7 +789,7 @@
                             </div>
                     
                             <!-- Landline 2 -->
-                            <div class="col-md-6 mb-2">
+                            <!-- <div class="col-md-6 mb-2">
                                 <div class="form-floating">
                                     <input
                                         type="text"
@@ -818,10 +801,10 @@
                                     />
                                     <label for="candidate_c_tel2">Landline 2</label>
                                 </div>
-                            </div>
+                            </div> -->
                     
                             <!-- Email 2 -->
-                            <div class="col-md-6 mb-2">
+                            <div class="col-md-12 mb-2">
                                 <div class="form-floating">
                                     <input
                                         type="text"
