--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -669,9 +669,9 @@
                     <span><a href="./reminder.html">Discussion Reminder</a></span>
                     <span><a href="./availableCandidates.html">Available Candidates</a></span>
                     <span><a href="./reportsAll.html">Export All</a></span>
-                    <span><a href="./queries.html">Queries</a></span>
+                    <span><a href="./queries.html">Queries and Suggestions</a></span>
 
-                    <span><a href="./report.html">Report</a></span>
+                    <span><a href="./report.html"> Report</a></span>
 
 
 
