--- a/views/public/html/loginpage.html
+++ b/views/public/html/loginpage.html
@@ -143,11 +143,11 @@
                 </a>
               </div>
               <!-- /Logo -->
-              <p class="mb-4">Sign in to continue</p>
+              <p class="mb-4">User login - Nsnemo</p>
 
               <form id="login-form" class="mb-3" >
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email or Username</label>
+                  <label for="email" class="form-label">Username</label>
                   <input
                     type="text"
                     class="form-control"
