--- a/views/public/html/view-cd.html
+++ b/views/public/html/view-cd.html
@@ -152,28 +152,7 @@
 
 
 
-             <li class="menu-header small text-uppercase">
-              <span class="menu-header-text">Vendor Management</span>
-            </li>
-            <li class="menu-item">
-              <a href="javascript:void(0);" class="menu-link menu-toggle">
-                <i class="menu-icon tf-icons bx bx-dock-top"></i>
-                <div data-i18n="Account Settings">Vendor</div>
-              </a>
-              <ul class="menu-sub">
-                <li class="menu-item">
-                  <a href="add-vendor.html" class="menu-link">
-                    <div data-i18n="Account">Add</div>
-                  </a>
-                </li>
-                <li class="menu-item">
-                  <a href="add-user.html" class="menu-link">
-                    <div data-i18n="Account">List</div>
-                  </a>
-                </li>
-                
-              </ul>
-            </li>
+          
 
 
             <li class="menu-header small text-uppercase">
@@ -197,7 +176,11 @@
                     <div data-i18n="Account">Edit Profile</div>
                   </a>
                 </li>
-                
+                <li class="menu-item">
+                  <a href="edit-cDocuments.html" class="menu-link">
+                    <div data-i18n="Account">Manage Documents</div>
+                  </a>
+                </li>
               </ul>
             </li>
 
@@ -424,11 +407,11 @@
                                                 </div>
                                             </div>
                                             <div class="row mt-3">
-                                              <div class="col-md-4">
+                                              <div class="col-md-6">
                                                   <label for="candidate_last_company">Previous Company</label>
                                                   <input type="text" class="form-control" id="candidate_last_company" readonly>
                                               </div>
-                                              <div class="col-md-4">
+                                              <div class="col-md-6">
                                                   <label for="candidate_last_salary">Previous Salary</label>
                                                   <input type="text" class="form-control" id="candidate_last_salary" readonly>
                                               </div>
@@ -479,16 +462,14 @@
                                                     <input type="text" class="form-control" id="mobile1" readonly>
                                                 </div>
                                                 <div class="col-md-4">
-                                                    <label for="landline1">Landline 1</label>
-                                                    <input type="text" class="form-control" id="landline1" readonly>
-                                                </div>
+                                                  <label for="email1">Email 1</label>
+                                                  <input type="text" class="form-control" id="email1" readonly>
+                                              </div>
+                                                
                                             </div>
                                 
                                             <div class="row mt-3">
-                                                <div class="col-md-4">
-                                                    <label for="email1">Email 1</label>
-                                                    <input type="text" class="form-control" id="email1" readonly>
-                                                </div>
+                                             
                                                 <hr class="mt-3"/>
 
                                                 <div class=" mb-4">
@@ -519,18 +500,13 @@
                                                     <input type="text" class="form-control" id="mobile2" readonly>
                                                 </div>
                                                 <div class="col-md-4">
-                                                    <label for="landline2">Landline 2</label>
-                                                    <input type="text" class="form-control" id="landline2" readonly>
-                                                </div>
+                                                  <label for="email2">Email 2</label>
+                                                  <input type="text" class="form-control" id="email2" readonly>
+                                              </div>
+                                                
                                             </div>
                                 
-                                            <div class="row mt-3">
-                                                
-                                                <div class="col-md-4">
-                                                    <label for="email2">Email 2</label>
-                                                    <input type="text" class="form-control" id="email2" readonly>
-                                                </div>
-                                            </div>
+                                           
                                             <!-- Add more input fields for additional address information -->
                                         </div>
                                     </div>
