--- a/views/public/html/edit-candidate.html
+++ b/views/public/html/edit-candidate.html
@@ -1341,7 +1341,7 @@
         
                         <div class="row">
                             <div class="col-md-6">
-                                <button type="submit" class="btn btn-primary mt-5 mb-5 me-5 ms-4" style="">ADD CANDIDATE</button>
+                                <button type="submit" class="btn btn-primary mt-5 mb-5 me-5 ms-4">ADD CANDIDATE</button>
                             </div>
                         </div>
                     </form>
