--- a/views/public/html/edit-crew-planner.html
+++ b/views/public/html/edit-crew-planner.html
@@ -758,6 +758,7 @@
             <option value="closed_by_client">Closed by Client</option>
         </select>
     </div>
+    <div><input type="hidden" id="edited_by" > </div>
     <div class="card-footer text-end pt-0 pb-0 pe-0">
     <button type="submit" class="btn btn-primary" >Update Crew Planner</button>
     </div>
