--- a/views/public/html/seaservice.html
+++ b/views/public/html/seaservice.html
@@ -31,9 +31,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Company - Nsnemo</title>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon/favicon.ico" />
 
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
@@ -804,6 +804,13 @@
                                 console.error('Error fetching sea service record:', error);
                             }
                         }
+                        function decodeToken(token) {
+    // Implementation depends on your JWT library
+    // Here, we're using a simple base64 decode
+    const base64Url = token.split('.')[1];
+    const base64 = base64Url.replace('-', '+').replace('_', '/');
+    return JSON.parse(atob(base64));
+}
    
                     document.addEventListener('DOMContentLoaded', async function () {
 
@@ -840,10 +847,11 @@
                         } catch (error) {
                             console.error('Error fetching sea service records:', error);
                         }
-                
+                        const token = localStorage.getItem('token')
+                        const decodedToken =decodeToken(token)
                         // Edit sea service form submission
                         const createdBy = document.getElementById('createdBy');
-                        createdBy.value = localStorage.getItem('username');
+                        createdBy.value = decodedToken.userId
                 
                         const seaServiceForm = document.getElementById('sea-service-form');
                 
