--- a/views/public/html/queries.html
+++ b/views/public/html/queries.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | Nsnemo</title>
+  <title>Queries and Suggestions | Nsnemo</title>
   <link rel="icon" type="image/x-icon" href="../assets/img/favicon/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap">
   <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
@@ -46,8 +46,8 @@
       </table>
     </div>
 
-    <div class="p-5 border border-secondary">
-      <div class="p-5" style="background-color: #f8f9fa; border-radius: 10px;">
+    <div class=" border border-secondary d-flex justify-content-between">
+      <div class="p-5 col-md-6" style="background-color: #f8f9fa; border-radius: 10px;">
         <h2 style="color: #007bff;">Add Query</h2>
         <form id="add-query-form">
           <div class="mb-3">
@@ -70,7 +70,7 @@
         </form>
       </div>
 
-      <div id="edit-query-section" class="p-5 mt-4" style="display: none; background-color: #f8f9fa; border-radius: 10px;">
+      <div id="edit-query-section" class="p-5  col-md-6" style="display: none; background-color: #f8f9fa; border-radius: 10px;">
         <h2 style="color: #007bff;">Edit Query</h2>
         <form id="edit-query-form">
           <div class="mb-3">
